--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,6 @@
 .container {
     header {
+        z-index: 1;
         position: relative;
         max-width: 1440px;
         width: 100%;
